Fixed Car img not aligning with text

--- a/hot-carz-dealership/src/Account.css
+++ b/hot-carz-dealership/src/Account.css
@@ -11,7 +11,6 @@
 }
 
 .carDisplay {
-  margin-top: 20px;
   /* background-color: #f5f5f5; */
   padding: 20px;
   border-radius: 5px;
